# tom

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
tom/spells/: features.py  geometry.py  pathing.py  shape.py  spell.py  types.py  writing.py
tom/util/: math.py
