[tool.poetry]
name = "tom"
version = "0.1.0"
description = ""
authors = ["ThatDevShparki <matt.murray@r2c.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"
pandas = "^1.5.3"
matplotlib = "^3.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.253"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py311"
select = [
    "B",
    "C4",
    "E7",
    "E9",
    "EXE",
    "I",
    "ICN",
    "W",
    "F",
    "PT",
    "RUF",
    "SIM",
    "UP",
]
ignore = [
    # Unused imports, might never be able to fix properly
    "F401",
    # TODO: Fix mutable function argument defaults
    "B006",
    # TODO: Fix return inside finally block
    "B012",
    # TODO: Fix comparison to None with ==
    "E711",
    # TODO: Fix comparison to True with ==
    "E712",
    # TODO: Fix raising inside exception handler
    "B904",
    # TODO: Useless comparison
    "B015",
    # TODO: pytest stuff without autofix
    "PT004",
    "PT005",
    "PT007",
    "PT011",
    "PT012",
    "PT015",
    "PT018",
    # never enable, we use specific unicode characters intentionally
    "RUF001",
    # TODO: flatten if conditions
    "SIM102",
    # TODO: use contextlib.suppress
    "SIM105",
    # TODO: use file open context manager
    "SIM115",
]

[tool.ruff.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]
